add support for dynamic button inside dialogs check dynamic-dialog-example.yml for exemple